# TomatoDotNet

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  test.py
Corelib/: Corelib.sln
Corelib/Corelib/: Corelib.csproj  Program.cs
Corelib/Corelib/System/: Array.cs  Boolean.cs  Char.cs  Delegate.cs  Int16.cs  Int32.cs  Int64.cs  IntPtr.cs  Object.cs  SByte.cs  String.cs  UInt16.cs  UInt32.cs  UInt64.cs  UIntPtr.cs
TdnCoreLib/: TdnCoreLib.sln
TdnCoreLib/System.Console/: Console.cs  System.Console.csproj
TdnCoreLib/System.Private.CoreLib/: System.Private.CoreLib.csproj
TdnCoreLib/System.Private.CoreLib/System/: Action.cs  ArgumentException.cs  ArgumentNullException.cs  ArgumentOutOfRangeException.cs  ArithmeticException.cs  Array.cs  Attribute.cs  AttributeTargets.cs  AttributeUsageAttribute.cs  Boolean.cs  Buffer.cs  Byte.cs  Char.cs  Delegate.cs  Exception.cs  FlagsAttribute.cs  Guid.cs  IComparable.cs  IConvertible.cs  IDisposable.cs  IEquatable.cs  IFormatProvider.cs  IFormattable.cs  ISpanFormattable.cs  IUtf8SpanFormattable.cs  IndexOutOfRangeException.cs  Int16.cs  Int32.cs  Int64.cs  IntPtr.cs  InvalidCastException.cs  InvalidOperationException.cs  Math.cs  MulticastDelegate.cs  NotImplemented.cs  NotImplementedException.cs  NotSupportedException.cs  NullReferenceException.cs  Nullable.cs  Number.Formatting.cs  (+24 more)
TdnCoreLib/System.Private.CoreLib/System/Diagnostics/: ConditionalAttribute.cs  Debug.cs  DebuggableAttribute.cs
TdnCoreLib/System.Private.CoreLib/System/Globalization/: CultureInfo.cs  NumberFormatInfo.cs
TdnCoreLib/System.Private.CoreLib/System/Numerics/: BitOperations.cs
TdnCoreLib/System.Private.CoreLib/System/Reflection/: Assembly.cs  AssemblyCompanyAttribute.cs  AssemblyConfigurationAttribute.cs  AssemblyFileVersionAttribute.cs  AssemblyInformationalVersionAttribute.cs  AssemblyProductAttribute.cs  AssemblyTitleAttribute.cs  ConstructorInfo.cs  DefaultMemberAttribute.cs  ExceptionHandlingClause.cs  ExceptionHandlingClauseOptions.cs  FieldInfo.cs  (+23 more)
TdnCoreLib/Tests/: Arrays.cs  BitTest.cs  Bool_And_Op.cs  Bool_No_Op.cs  CodeGenBringUpTests.cs  ConstantFolding.cs  GenericFields.cs  Int_No_Op.cs  Program.cs  Shifts.cs  Tests.csproj
host/linux/: Makefile  host.c  main.c
host/linux/gc/: c-rbtree-private.h  c-rbtree.c  c-rbtree.h  gc.c  mem_tree.c  mem_tree.h
include/tinydotnet/: disasm.h  host.h  tdn.h
include/tinydotnet/jit/: jit.h
include/tinydotnet/types/: basic.h  reflection.h  type.h
include/tomatodotnet/: disasm.h  except.h  host.h  tdn.h
include/tomatodotnet/jit/: jit.h
include/tomatodotnet/types/: basic.h  reflection.h  type.h
libs/tdn-icu4x/: Cargo.toml
libs/tdn-icu4x/src/: lib.rs  platform.rs
libs/tdn-rust-libs/: Cargo.toml
libs/tdn-rust-libs/src/: lib.rs  log.rs  platform.rs
scripts/: pretty_printer.py
src/: main.c
src/dotnet/: activator.c  activator.h  assembly.c  assembly.h  assembly_internal.c  assembly_internal.h  cil_opcodes.h  disasm.c  disasm.h  encoding.c  exception.c  exception.h  filler.c  filler.h  gc.c  gc.h  jit.c  jit.h  loader.c  loader.h  metadata.c  metadata.h  metadata_spec.h  method.c  method.h  mir_utils.c  mir_utils.h  monitor.c  monitor.h  opcodes.c  pe_spec.h  signature.c  signature.h  signature_spec.h  tdn.c  thread.c  thread.h  type.c  type.h  types.c  (+1 more)
src/dotnet/gc/: asan.h  gc.c  gc.h  gc_thread_data.h  heap.h  size_class.c  size_class.h
src/dotnet/il/: disasm.c  disasm.h
src/dotnet/jit/: builtin.c  builtin.h  codegen.c  codegen.h  elf.c  elf.h  emit.c  emit.h  emitter.c  emitter.h  function.c  function.h  gdb.c  gdb.h  helpers.c  helpers.h  internal.c  internal.h  internal_calls.c  internal_calls.h  jit.c  jit.h  jit_basic_block.c  jit_basic_block.h  jit_builtin.c  jit_builtin.h  jit_codegen.c  jit_codegen.h  jit_elf.c  jit_elf.h  jit_emit.c  jit_emit.h  jit_function.c  jit_function.h  jit_gdb.c  jit_gdb.h  jit_helpers.c  jit_helpers.h  jit_interface.c  jit_interface.h  (+16 more)
src/dotnet/metadata/: metadata.c  metadata.h  metadata_spec.h  metadata_tables.h  pe.c  pe.h  pe_image.h  sig.c  sig.h  sig_spec.h
src/dotnet/types/: assembly.c  method.c  string.c  type.c
src/dotnet/verifier/: accessibility.c  accessibility.h  basic_block.c  basic_block.h  casting.c  casting.h  control_flow.c  control_flow.h  instruction.c  instruction.h  internal.c  internal.h  localloc.c  localloc.h  verifier.c  verifier.h
src/hosted/: gc.c  main.c
src/hosted/heap/: heap.c  mimalloc_region.c  mimalloc_region.h
src/hosted/mem/: malloc.h
src/hosted/sync/: conditional.c  conditional.h  mutex.c  mutex.h  rwmutex.h  semaphore.c  semaphore.h  spinlock.c  spinlock.h  wait_group.c  wait_group.h
src/hosted/thread/: scheduler.c  scheduler.h  thread.c  thread.h  waitable.c
src/hosted/time/: timer.c  timer.h  tsc.c  tsc.h
src/hosted/util/: except.h  fastrand.c  fastrand.h  printf.c  strbuilder.c  trace.c  trace.h
src/util/: alloc.c  alloc.h  c-rbtree-private.h  c-rbtree.c  defs.h  dwarf.h  elf_common.h  except.c  except.h  icu4x_platform.c  list.c  list.h  murmur64.c  murmur64.h  prime.c  prime.h  stb_ds.c  stb_ds.h  string.h  string_builder.c  string_builder.h  trace.c  trace.h
test/: main.c
tests/: generate_csproj.py  test.py  tests.sln
tests/JIT/CodeGenBringUpTests/: Add1.csproj  And1.csproj  AndRef.csproj  Args4.csproj  Args5.csproj  Array1.csproj  Array2.csproj  Array3.csproj  Array4.csproj  ArrayJagged.csproj  ArrayObj.csproj  AsgAdd1.cs  AsgAdd1.csproj  AsgAnd1.csproj  AsgOr1.csproj  AsgSub1.cs  AsgSub1.csproj  AsgXor1.cs  AsgXor1.csproj  BinaryRMW.cs  BinaryRMW.csproj  Call1.cs  Call1.csproj  CastThenBinop.cs  CastThenBinop.csproj  CnsBool.cs  CnsBool.csproj  CnsLng1.cs  CnsLng1.csproj  DblAdd.cs  DblAdd.csproj  DblAddConst.cs  DblAddConst.csproj  DblArea.cs  DblArea.csproj  DblArray.cs  DblArray.csproj  DblAvg2.cs  DblAvg2.csproj  DblAvg6.cs  (+202 more)
tests/ilverify/: BasicArithmeticTests.il  BranchingTests.il  CallTests.il  CastingTests.il  ExceptionRegionTests.il  InterfaceDefinition.il  LoadStoreIndirectTests.il  PrefixTests.il  ReturnTests.il  ThisStateTests.il
(+333 files in other folders)
