[package]
name = "tdn-rust-libs"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["staticlib"]

[dependencies.c-api]
path = "../spidir/c-api"

[dependencies.icu_capi]
path = "../icu4x/ffi/capi"
default-features = false
features = ["casemap", "compiled_data"]

[patch.crates-io]
# The latest published version of `hexfloat2` doesn't yet include its `no_std` support; grab a
# version that does.
hexfloat2 = { git = "https://github.com/ericseppanen/hexfloat2.git", rev = "42baa1ffaf641163e2bc63a3fccacab2f3957860" }
