[package]
name = "tdn-rust-libs"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["staticlib"]

[dependencies.bindings]
path = "../spidir/crates/bindings"

[dependencies.icu_capi]
path = "../icu4x/ffi/capi"
default-features = false
features = ["locale", "experimental", "compiled_data"]

[patch.crates-io]
# The latest published version of `hexfloat2` doesn't yet include its `no_std` support; grab a
# version that does.
hexfloat2 = { git = "https://github.com/ericseppanen/hexfloat2.git", rev = "42baa1ffaf641163e2bc63a3fccacab2f3957860" }

[dependencies]
log = "0.4.22"